--- a/frontend/src/app/component/horse/horse-create-edit/horse-create-edit.component.html
+++ b/frontend/src/app/component/horse/horse-create-edit/horse-create-edit.component.html
@@ -118,6 +118,7 @@
     <button type="button"
             class="btn btn-danger"
             *ngIf="!modeIsCreate"
+            (click)="onDelete()"
             >
       <i class="bi bi-trash"></i>
       Delete
