--- a/frontend/src/app/component/horse/horse-create-edit/horse-create-edit.component.html
+++ b/frontend/src/app/component/horse/horse-create-edit/horse-create-edit.component.html
@@ -1,4 +1,3 @@
-
 <h1 class="display-1">{{heading}}</h1>
 
 
@@ -12,7 +11,7 @@
           Name
         </label>
         <div class="col-md-10 col-lg-8"
-             >
+        >
           <input type="text"
                  id="horseName"
                  name="horseName"
@@ -22,7 +21,7 @@
                  [(ngModel)]="horse.name"
                  #horseNameModel="ngModel"
                  required
-                 >
+          >
           <div class="invalid-feedback">
             <!-- This is shown, when the form validation deems the name input to be invalid -->
             Name is required
@@ -36,7 +35,7 @@
           Date of Birth
         </label>
         <div class="col-md-10 col-lg-8"
-             >
+        >
           <input type="date"
                  id="horseDateOfBirth"
                  name="horseDateOfBirth"
@@ -45,7 +44,7 @@
                  [(ngModel)]="horse.dateOfBirth"
                  #horseDateOfBirthModel="ngModel"
                  required
-                 >
+          >
           <div class="invalid-feedback">
             Date of birth is required
           </div>
@@ -63,13 +62,13 @@
           Sex
         </label>
         <div class="col-md-10 col-lg-8"
-             >
+        >
           <select class="form-select"
                   id="horseSex"
                   name="horseSex"
                   [(ngModel)]="horse.sex"
                   required
-                  >
+          >
             <option value="FEMALE">Female</option>
             <option value="MALE">Male</option>
           </select>
@@ -91,10 +90,50 @@
           [(ngModel)]="horse.owner"
           [formatModel]="formatOwnerName"
           [suggestions]="ownerSuggestions"
-          ></app-autocomplete>
+        ></app-autocomplete>
       </div>
     </div>
     <!-- End sex and owner row -->
+  </div>
+  <div class="row">
+    <!-- Start parent row -->
+    <div class="mb-2 col-lg-6">
+      <div class="row">
+        <label for="mother" class="col-form-label text-md-end text-muted col-md-2 col-lg-4">
+          Mother
+        </label>
+        <app-autocomplete
+          id="mother"
+          name="mother"
+          class="col-md-10 col-lg-8"
+          textInputClass="form-control"
+          valueNeedsToMatchSuggestion="true"
+          [(ngModel)]="horse.mother"
+          [formatModel]="formatParentName"
+          [suggestions]="fatherSuggestions"
+        ></app-autocomplete>
+      </div>
+    </div>
+
+    <div class="mb-2 col-lg-6">
+      <div class="row">
+        <label for="father" class="col-form-label text-md-end text-muted col-md-2 col-lg-4">
+          Father
+        </label>
+        <app-autocomplete
+          id="father"
+          name="father"
+          class="col-md-10 col-lg-8"
+          textInputClass="form-control"
+          valueNeedsToMatchSuggestion="true"
+          [(ngModel)]="horse.father"
+          [formatModel]="formatParentName"
+          [suggestions]="motherSuggestions"
+        ></app-autocomplete>
+
+      </div>
+    </div>
+    <!-- End parent row -->
   </div>
 
 
@@ -104,12 +143,12 @@
       Description
     </label>
     <div class="col-md-10"
-         >
+    >
       <textarea class="form-control"
                 id="horseDescription"
                 name="horseDescription"
                 [(ngModel)]="horse.description"
-                >
+      >
       </textarea>
     </div>
   </div>
@@ -119,7 +158,7 @@
             class="btn btn-danger"
             *ngIf="!modeIsCreate"
             (click)="onDelete()"
-            >
+    >
       <i class="bi bi-trash"></i>
       Delete
     </button>
@@ -128,7 +167,7 @@
             class="btn btn-primary"
             [disabled]="!form.valid"
             type="submit"
-            >
+    >
       {{submitButtonText}}
     </button>
   </div>
