--- a/frontend/src/app/component/horse/horse-create-edit/horse-create-edit.component.html
+++ b/frontend/src/app/component/horse/horse-create-edit/horse-create-edit.component.html
@@ -1,4 +1,16 @@
-<h1 class="display-1">{{heading}}</h1>
+<div class="d-flex justify-content-between align-items-end pb-4">
+  <h1 class="display-1">{{heading}}</h1>
+  <ng-container [ngSwitch]="mode">
+    <a
+      [routerLink]="['../../view', horse.id]"
+      aria-label="Show horse details"
+      class="btn btn-sm responsive-info-button"
+    >
+      <i class="bi bi-info-lg mr-2"></i>
+      Details
+    </a>
+  </ng-container>
+</div>
 
 
 <form #form="ngForm" (ngSubmit)="onSubmit(form)">
@@ -7,20 +19,20 @@
     <div class="mb-2 col-lg-6">
       <!-- When nesting rows, always make row > col-* > row. The Bootstrap classes do not work right when an element is both col* and row -->
       <div class="row">
-        <label for="horseName" class="col-form-label text-md-end text-muted col-md-2 col-lg-4">
+        <label class="col-form-label text-md-end text-muted col-md-2 col-lg-4" for="horseName">
           Name
         </label>
         <div class="col-md-10 col-lg-8"
         >
-          <input type="text"
+          <input #horseNameModel="ngModel"
+                 [(ngModel)]="horse.name"
+                 [class]="dynamicCssClassesForInput(horseNameModel)"
+                 class="form-control"
                  id="horseName"
                  name="horseName"
                  placeholder="Horse name"
-                 class="form-control"
-                 [class]="dynamicCssClassesForInput(horseNameModel)"
-                 [(ngModel)]="horse.name"
-                 #horseNameModel="ngModel"
                  required
+                 type="text"
           >
           <div class="invalid-feedback">
             <!-- This is shown, when the form validation deems the name input to be invalid -->
@@ -31,19 +43,19 @@
     </div>
     <div class="mb-2 col-lg-6">
       <div class="row">
-        <label for="horseDateOfBirth" class="col-form-label text-md-end text-muted col-md-2 col-lg-4">
+        <label class="col-form-label text-md-end text-muted col-md-2 col-lg-4" for="horseDateOfBirth">
           Date of Birth
         </label>
         <div class="col-md-10 col-lg-8"
         >
-          <input type="date"
+          <input #horseDateOfBirthModel="ngModel"
+                 [(ngModel)]="horse.dateOfBirth"
+                 [class]="dynamicCssClassesForInput(horseDateOfBirthModel)"
+                 class="form-control"
                  id="horseDateOfBirth"
                  name="horseDateOfBirth"
-                 class="form-control"
-                 [class]="dynamicCssClassesForInput(horseDateOfBirthModel)"
-                 [(ngModel)]="horse.dateOfBirth"
-                 #horseDateOfBirthModel="ngModel"
                  required
+                 type="date"
           >
           <div class="invalid-feedback">
             Date of birth is required
@@ -58,15 +70,15 @@
     <!-- Start sex and owner row -->
     <div class="mb-2 col-lg-6">
       <div class="row">
-        <label for="horseSex" class="col-form-label text-md-end text-muted col-md-2 col-lg-4">
+        <label class="col-form-label text-md-end text-muted col-md-2 col-lg-4" for="horseSex">
           Sex
         </label>
         <div class="col-md-10 col-lg-8"
         >
-          <select class="form-select"
+          <select [(ngModel)]="horse.sex"
+                  class="form-select"
                   id="horseSex"
                   name="horseSex"
-                  [(ngModel)]="horse.sex"
                   required
           >
             <option value="FEMALE">Female</option>
@@ -78,18 +90,18 @@
 
     <div class="mb-2 col-lg-6">
       <div class="row">
-        <label for="horseOwner" class="col-form-label text-md-end text-muted col-md-2 col-lg-4">
+        <label class="col-form-label text-md-end text-muted col-md-2 col-lg-4" for="horseOwner">
           Owner
         </label>
         <app-autocomplete
-          id="horseOwner"
-          name="horseOwner"
-          class="col-md-10 col-lg-8"
-          textInputClass="form-control"
-          valueNeedsToMatchSuggestion="true"
           [(ngModel)]="horse.owner"
           [formatModel]="formatOwnerName"
           [suggestions]="ownerSuggestions"
+          class="col-md-10 col-lg-8"
+          id="horseOwner"
+          name="horseOwner"
+          textInputClass="form-control"
+          valueNeedsToMatchSuggestion="true"
         ></app-autocomplete>
       </div>
     </div>
@@ -99,36 +111,36 @@
     <!-- Start parent row -->
     <div class="mb-2 col-lg-6">
       <div class="row">
-        <label for="mother" class="col-form-label text-md-end text-muted col-md-2 col-lg-4">
+        <label class="col-form-label text-md-end text-muted col-md-2 col-lg-4" for="mother">
           Mother
         </label>
         <app-autocomplete
-          id="mother"
-          name="mother"
-          class="col-md-10 col-lg-8"
-          textInputClass="form-control"
-          valueNeedsToMatchSuggestion="true"
           [(ngModel)]="horse.mother"
           [formatModel]="formatParentName"
           [suggestions]="fatherSuggestions"
+          class="col-md-10 col-lg-8"
+          id="mother"
+          name="mother"
+          textInputClass="form-control"
+          valueNeedsToMatchSuggestion="true"
         ></app-autocomplete>
       </div>
     </div>
 
     <div class="mb-2 col-lg-6">
       <div class="row">
-        <label for="father" class="col-form-label text-md-end text-muted col-md-2 col-lg-4">
+        <label class="col-form-label text-md-end text-muted col-md-2 col-lg-4" for="father">
           Father
         </label>
         <app-autocomplete
-          id="father"
-          name="father"
-          class="col-md-10 col-lg-8"
-          textInputClass="form-control"
-          valueNeedsToMatchSuggestion="true"
           [(ngModel)]="horse.father"
           [formatModel]="formatParentName"
           [suggestions]="motherSuggestions"
+          class="col-md-10 col-lg-8"
+          id="father"
+          name="father"
+          textInputClass="form-control"
+          valueNeedsToMatchSuggestion="true"
         ></app-autocomplete>
 
       </div>
@@ -139,33 +151,33 @@
 
   <div class="row">
     <!-- No row and col-* here. We want this to always span the whole width. -->
-    <label for="horseDescription" class="col-form-label text-md-end text-md-end text-muted col-md-2">
+    <label class="col-form-label text-md-end text-md-end text-muted col-md-2" for="horseDescription">
       Description
     </label>
     <div class="col-md-10"
     >
-      <textarea class="form-control"
+      <textarea [(ngModel)]="horse.description"
+                class="form-control"
                 id="horseDescription"
                 name="horseDescription"
-                [(ngModel)]="horse.description"
       >
       </textarea>
     </div>
   </div>
 
   <div class="mt-4 d-flex flex-row">
-    <button type="button"
-            class="btn btn-danger"
+    <button (click)="onDelete()"
             *ngIf="!modeIsCreate"
-            (click)="onDelete()"
+            class="btn btn-danger"
+            type="button"
     >
       <i class="bi bi-trash"></i>
       Delete
     </button>
     <span class="flex-grow-1"></span>
-    <button type="submit"
+    <button [disabled]="!form.valid"
             class="btn btn-primary"
-            [disabled]="!form.valid"
+            type="submit"
             type="submit"
     >
       {{submitButtonText}}
