--- a/frontend/src/app/component/horse/horse.component.scss
+++ b/frontend/src/app/component/horse/horse.component.scss
@@ -4,22 +4,28 @@
 @import "node_modules/bootstrap/scss/mixins";
 
 .min-width {
-    /* Used to get the actions column in the table to be not wider than necessary */
-    width: 0;
+  /* Used to get the actions column in the table to be not wider than necessary */
+  width: 0;
 }
 
 .center-td > td {
-    vertical-align: middle;
+  vertical-align: middle;
 }
 
 .responsive-info-button, .responsive-warning-button, .responsive-danger-button, .responsive-dark-button, .responsive-tree-button {
-    @include button-variant($light, $light);
+  @include button-variant($light, $light);
 }
 
 @each $color in (info, warning, danger) {
-    $value: map.get($theme-colors, $color);
-    tr:hover .responsive-#{$color}-button {
-        @include button-variant($value, $value);
-    }
+  $value: map.get($theme-colors, $color);
+  tr:hover .responsive-#{$color}-button {
+    @include button-variant($value, $value);
+  }
 }
 
+@each $color in (info, warning, danger) {
+  $value: map.get($theme-colors, $color);
+  a:hover.responsive-#{$color}-button {
+    @include button-variant($value, $value);
+  }
+}
