--- a/frontend/src/app/component/horse/horse-create-edit/horse-create-edit.component.html
+++ b/frontend/src/app/component/horse/horse-create-edit/horse-create-edit.component.html
@@ -2,7 +2,7 @@
   <h1 class="display-1">{{heading}}</h1>
   <ng-container [ngSwitch]="mode">
     <a
-      [routerLink]="['../../view', horse.id]"
+      [routerLink]="['../../detail', horse.id]"
       aria-label="Show horse details"
       class="btn btn-sm responsive-info-button"
     >
@@ -177,7 +177,6 @@
     <span class="flex-grow-1"></span>
     <button [disabled]="!form.valid"
             class="btn btn-primary"
-            type="submit"
             type="submit"
     >
       {{submitButtonText}}
