[US8] added owner list to the owners site (frontend)

--- a/frontend/src/app/component/owner/owner.component.html
+++ b/frontend/src/app/component/owner/owner.component.html
@@ -1,1 +1,31 @@
-<p>owner works!</p>
+<div class="d-flex flex-row w-auto">
+  <button (click)="reloadOwners()" aria-label="Reload Owners" class="btn btn-primary mr-1">
+    <i class="bi bi-arrow-clockwise"></i>
+    Reload
+  </button>
+  <span style="flex: 1"></span>
+  <a aria-label="New horse" class="btn btn-secondary" routerLink="create">
+    <i class="bi bi-plus-lg"></i>
+    New Owner
+  </a>
+</div>
+
+
+<div class="mt-3">
+  <table class="table table-hover">
+    <thead>
+    <th>First Name</th>
+    <th>Last Name</th>
+    <th>Email</th>
+    </thead>
+    <tbody>
+    <tr *ngFor="let owner of owners" class="center-td">
+      <td>{{owner.firstName}}</td>
+      <td>{{owner.lastName}}</td>
+      <td>{{owner.email}}</td>
+    </tr>
+    </tbody>
+  </table>
+</div>
+
+
