[US7] added functionality to crete owner on the owner-create page (frontend)

--- a/frontend/src/app/component/owner/owner-create/owner-create.component.html
+++ b/frontend/src/app/component/owner/owner-create/owner-create.component.html
@@ -1,1 +1,93 @@
-<p>owner-create works!</p>
+<h1 class="display-1">Create new Owner</h1>
+
+<form #form="ngForm" (ngSubmit)="onSubmit(form)">
+  <div class="row">
+    <!-- Start first an last name row -->
+    <div class="mb-2 col-lg-6">
+      <!-- When nesting rows, always make row > col-* > row. The Bootstrap classes do not work right when an element is both col* and row -->
+      <div class="row">
+        <label class="col-form-label text-md-end text-muted col-md-2 col-lg-4" for="firstName">
+          First Name
+        </label>
+        <div class="col-md-10 col-lg-8">
+          <input #horseNameModel="ngModel"
+                 [(ngModel)]="owner.firstName"
+                 [class]="dynamicCssClassesForInput(horseNameModel)"
+                 class="form-control"
+                 id="firstName"
+                 name="firstName"
+                 placeholder="First Name"
+                 required
+                 type="text"
+          >
+          <div class="invalid-feedback">
+            <!-- This is shown, when the form validation deems the name input to be invalid -->
+            First Name is required
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="mb-2 col-lg-6">
+      <div class="row">
+        <label class="col-form-label text-md-end text-muted col-md-2 col-lg-4" for="LastName">
+          Last Name
+        </label>
+        <div class="col-md-10 col-lg-8">
+          <input #horseNameModel="ngModel"
+                 [(ngModel)]="owner.lastName"
+                 [class]="dynamicCssClassesForInput(horseNameModel)"
+                 class="form-control"
+                 id="LastName"
+                 name="lastName"
+                 placeholder="Last Name"
+                 required
+                 type="text"
+          >
+          <div class="invalid-feedback">
+            <!-- This is shown, when the form validation deems the name input to be invalid -->
+            Last Name is required
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End first an last name row -->
+  </div>
+  <div class="row">
+    <!-- Start emil row -->
+    <div class="mb-2 col-lg-6">
+      <!-- When nesting rows, always make row > col-* > row. The Bootstrap classes do not work right when an element is both col* and row -->
+      <div class="row">
+        <label class="col-form-label text-md-end text-muted col-md-2 col-lg-4" for="email">
+          eMail
+        </label>
+        <div class="col-md-10 col-lg-8">
+          <input #horseNameModel="ngModel"
+                 [(ngModel)]="owner.email"
+                 [class]="dynamicCssClassesForInput(horseNameModel)"
+                 class="form-control"
+                 id="email"
+                 name="email"
+                 placeholder="eMail"
+                 required
+                 type="text"
+          >
+          <div class="invalid-feedback">
+            <!-- This is shown, when the form validation deems the name input to be invalid -->
+            email is required
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="mt-4 d-flex flex-row">
+
+    <span class="flex-grow-1"></span>
+    <button [disabled]="!form.valid"
+            class="btn btn-primary"
+            type="submit"
+    >
+      create
+    </button>
+  </div>
+</form>
