--- a/frontend/src/app/component/horse/horse-tree/horse-tree-node/horse-tree-node.component.html
+++ b/frontend/src/app/component/horse/horse-tree/horse-tree-node/horse-tree-node.component.html
@@ -1,35 +1,44 @@
-<div class="border rounded expanded">
-
-  <i class="bi bi-chevron-down"></i>
-  <div>{{horse.name}} | {{horse.sex}}</div>
-  <div>
-    {{ horse.dateOfBirth | date : 'longDate' }}
-  </div>
-  <div class="btn-group">
-    <a (click)="delete(horse.id)"
-       aria-label="Delete horse"
-       class="btn btn-sm responsive-danger-button">
-      <i class="bi bi-trash"></i>
-    </a>
-    <a [routerLink]="['detail', horse.id]"
-       aria-label="Show horse details"
-       class="btn btn-sm responsive-info-button">
-      <i class="bi bi-info-lg"></i>
-    </a>
-    <a [routerLink]="['edit', horse.id]"
-       aria-label="Edit horse"
-       class="btn btn-sm responsive-warning-button">
-      <i class="bi bi-pencil"></i>
-    </a>
-  </div>
-  <div
-    class="tree-parents"
-  >
+<div>
+    <div class="border rounded expanded d-flex align-items-center justify-content-start">
+      <div class="border border-secondary rounded expand-icon expand-button"
+      role="button"
+      (click)="toggleParents()">
+        <i class="bi bi-chevron-down"></i>
+      </div>
+      <div class="text-left">
+        {{horse.name}} | {{horse.sex}}
+      </div>
+      <div class="text-right">
+        <div class="d-inline-block mr-3">
+          {{ horse.dateOfBirth | date : 'shortDate' }}
+        </div>
+        <div class="btn-group d-inline-block">
+          <a (click)="delete(horse.id)"
+             aria-label="Delete horse"
+             class="btn btn-sm responsive-danger-button">
+            <i class="bi bi-trash"></i>
+          </a>
+          <a [routerLink]="['../../detail', horse.id]"
+             aria-label="Show horse details"
+             class="btn btn-sm responsive-info-button">
+            <i class="bi bi-info-lg"></i>
+          </a>
+          <a [routerLink]="['../../edit', horse.id]"
+             aria-label="Edit horse"
+             class="btn btn-sm responsive-warning-button">
+            <i class="bi bi-pencil"></i>
+          </a>
+        </div>
+      </div>
+    </div>
+    <div class="tree-parents">
     <app-horse-tree-node
+      [hidden]="collapsParents"
       *ngIf="horse && horse.mother"
       [horse]="horse.mother"
     ></app-horse-tree-node>
     <app-horse-tree-node
+      [hidden]="collapsParents"
       *ngIf="horse && horse.father"
       [horse]="horse.father"
     ></app-horse-tree-node>
