--- a/frontend/src/app/component/horse/horse-tree/horse-tree-node/horse-tree-node.component.scss
+++ b/frontend/src/app/component/horse/horse-tree/horse-tree-node/horse-tree-node.component.scss
@@ -22,3 +22,36 @@
     @include button-variant($value, $value);
   }
 }
+
+.tree-parents {
+  padding-left: 2em;
+}
+
+.border.expanded {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px;
+
+  .text-left {
+    text-align: left;
+    margin-right: auto;
+  }
+
+  .text-right {
+    text-align: right;
+    margin-left: auto;
+  }
+}
+
+.mr-3 {
+  margin-right: 10px;
+}
+.expand-button {
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+
+  margin-right: 5px;
+}
